Avoid layout flickering by giving width and height of square images

--- a/panel/src/scss/components/_logo.scss
+++ b/panel/src/scss/components/_logo.scss
@@ -13,6 +13,7 @@
 }
 
 .logo img {
+    width: 1.5rem;
     height: 1.5rem;
     margin-right: 0.25rem;
     vertical-align: -0.25rem;
