--- a/panel/src/scss/components/_users.scss
+++ b/panel/src/scss/components/_users.scss
@@ -4,14 +4,18 @@
 }
 
 .user-summary-image {
-    margin-top: -7.5rem;
+    overflow: hidden;
+    width: 12rem;
+    height: 12rem;
+    border-radius: $border-radius-round;
+    margin: -7.5rem auto 0.5rem;
+    background-color: var(--color-base-400);
+    box-shadow: $box-shadow-sm;
 }
 
 .user-summary-image img {
-    width: 12rem;
-    border-radius: $border-radius-round;
-    background-color: var(--color-base-900);
-    box-shadow: $box-shadow-sm;
+    width: 100%;
+    height: 100%;
 }
 
 .users-list {
@@ -53,6 +57,7 @@
     width: 2rem;
     height: 2rem;
     border-radius: 50%;
+    background-color: var(--color-base-400);
     box-shadow: $box-shadow-sm;
     vertical-align: middle;
 }
